--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.application.name=parish-service
 management.endpoints.web.exposure.include=*
 eureka.instance.prefer-ip-address=true
 
+gateway.security.key=MyApiGateway
+
 # Config Server
 spring.config.import=optional:configserver:https://acceptable-expression-production.up.railway.app
 
